Fix side scroll issue on mobile devices
Former-commit-id: 06b2a8972db68a77bc438d97bc7613e27301105c
Former-commit-id: 7a05b5f22573fa6828eb649fae365d5b0828650d
Former-commit-id: c62f389f0bc99117dd63d7e92d36b67f10ae2a84 [formerly e640d0241a0f80cce5518732dbd4c258113da4ff]
Former-commit-id: 1921201c05811740e44cd072b43b92bf4d43f20f

--- a/css/screen.css
+++ b/css/screen.css
@@ -100,7 +100,7 @@ a {
     color: #fff;
     display: block;
     margin: auto;
-    width: 210px;
+    max-width: 210px;
     margin: 0;
 }
 @media screen and (max-width: 600px) { 
